src/test/ui/regions/regions-implied-bounds-projection-gap-1.base.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-implied-bounds-projection-gap-1.rs:20:10
   |
LL |     wf::<&'x T>();
   |          ^^^^^ ...so that the reference type `&'x T` does not outlive the data it points at
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn func<'x, T:Trait1<'x> + 'x>(t: &'x T::Foo)
   |                          ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
